--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -37,6 +37,10 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jersey</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
