--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>CHESSim</groupId>
     <artifactId>Server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
 
     <name>CHESSim_Server</name>
