--- a/Server/makefile
+++ b/Server/makefile
@@ -1,4 +1,4 @@
 make:
 	mvn clean package
 run: make
-	java -jar target/Server-1.0-SNAPSHOT.jar server config.yml
+	java -jar target/Server-0.2.jar server config.yml
